package at.htl.entity;

public enum EntType {
    Produkt,
    Dienst,
    Event,
    Prozesse
}
