package at.htl.entity;

public enum ResType {
    Text,
    Link,
    Selection
}
